cmake_minimum_required(VERSION 3.19)
project(MyTinySTL)
include_directories(../MyTinySTL)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -fexec-charset=GBK")
set(SOURCE_LIST test.cpp test.h queue_test.h deque_test.h list_test.h rb_tree_test.h vector_test.h stack_test.h map_test.h set_test.h)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
add_executable(stltest ${SOURCE_LIST})
